# honeybadger

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  chat_settings_modal.html  docker-compose.yml  execution_split_view.html  login.html  manus_clone.html  task_kanban.html  task_kanban_two_rows.html  tools_skills.html
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_pgvector.py  002_document_chunk.py  003_memory_system.py  006_task_queue_fields.py  007_global_rag_registry.py  008_add_owner_user_id_and_user_tables.py  009_rag_collections_owner_user_id.py  1004c8374fe5_initial_schema_with_all_models.py  1005_document_index_jobs_and_uuid_chunks.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  artifact.py  document_chunk.py  document_index_job.py  project.py  rag_collection.py  task.py
backend/app/routers/: artifacts.py  conversations.py  projects.py  rag.py  runs.py  tasks.py
backend/app/schemas/: __init__.py  conversation.py  memory.py  project.py  task.py  task_queue.py
backend/app/services/: queue_service.py  rag_service.py  storage.py  task_scheduler.py
backend/rag/: chunker.py  embeddings.py  indexer.py  retriever.py
backend/rag/parsers/: __init__.py
backend/tests/: conftest.py  test_api_artifacts.py  test_api_conversations.py  test_api_memory.py  test_api_projects.py  test_api_rag.py  test_api_runs.py  test_api_tasks.py  test_chunker.py  test_contract_execution_apis.py  test_contract_projects.py  test_embeddings.py  test_indexer.py  test_memory_service.py  test_queue_service.py  test_retriever.py  test_schemas.py  test_task_scheduler.py
services/project-service/: pyproject.toml
services/project-service/app/: config.py  database.py  main.py
services/project-service/tests/: test_project_rag_binding_api.py  test_projects_multipart_api.py
services/rag-service/: Dockerfile  pyproject.toml
services/rag-service/app/: __init__.py  config.py  database.py  main.py
services/rag-service/tests/: test_hybrid_retriever.py  test_index_job_service.py  test_projects_api.py  test_query_rewriter.py  test_rag_collections_api.py  test_reranker.py  test_search_service.py  test_semantic_chunker.py  test_storage_service.py
services/rag-service/worker/: indexjob_worker.py
services/task-service/: pyproject.toml
services/task-service/app/: config.py  database.py  main.py
services/task-service/tests/: test_models_api.py  test_task_retry_service.py
services/task-service/worker/: taskrun_worker.py
worker/: Dockerfile  __init__.py  config.py  db_models.py  main.py  pyproject.toml  worker_indexjob.py  worker_taskrun.py
worker/models/: __init__.py  anthropic_native.py  anthropic_provider.py  base.py  exceptions.py  factory.py  openai_compat.py  openai_provider.py  registry.py  router.py  tool_calling.py  types.py
worker/orchestrator/: agent.py  exceptions.py
worker/queueing/: __init__.py  rabbitmq_client.py
worker/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  retriever.py  semantic_chunker.py
worker/rag/parsers/: base.py  (+7 more)
worker/sandbox/: docker_backend.py  exceptions.py  manager.py  pool_service.py
worker/services/: backend_client.py  storage_client.py
worker/skills/: __init__.py  loader.py  registry.py
worker/tests/: create_test_pdf.py  test_agent.py  test_base_parser.py  test_browser_tools.py  test_chunker.py  test_docker_backend.py  test_embeddings.py  test_indexer.py  test_main.py  test_markdown_parser.py  test_model_registry.py  test_model_router.py  test_models.py  test_models_anthropic.py  test_models_base.py  test_models_factory.py  test_models_openai.py  test_pdf_parser.py  test_python_tool.py  test_rabbitmq_client.py  test_retriever.py  test_sandbox_manager.py  test_sandbox_pool_service.py  test_skill_registry.py  test_skills.py  test_storage_client.py  test_streaming_indexing_core.py  test_tools.py  test_txt_parser.py  test_web_tool.py
worker/tools/: __init__.py  base.py  browser.py  exceptions.py  file.py  python.py  tool_base.py  web.py
(+369 files in other folders)
