[project]
name = "badgers-backend"
version = "0.1.0"
description = "Manus MVP Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "aio-pika>=9.0.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "pgvector>=0.2.0",
    "minio>=7.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
extend-ignore = ["F821"]
per-file-ignores = {"app/models/*.py" = ["F821"]}

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
