[project]
name = "badgers-worker"
version = "0.1.0"
description = "Manus MVP Task Execution Worker"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "playwright>=1.40.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.6",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
