[project]
name = "task-service"
version = "0.1.0"
description = "Badgers task, runs, and artifacts service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "aio-pika>=9.0.0",
    "python-multipart>=0.0.6",
    "pgvector>=0.2.0",
    "minio>=7.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
